--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primereact": "^8.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2"
   },
