--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "animate.css": "^4.1.1",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0",
     "react": "^18.2.0",
