--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
+    "react-simple-maps": "^3.0.0",
     "react-time-picker": "^5.0.0"
   },
   "devDependencies": {
