fix add alarm time field and change add alarm button to speeddial

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "animate.css": "^4.1.1",
+    "formik": "^2.2.9",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-simple-maps": "^3.0.0",
-    "react-time-picker": "^5.0.0"
+    "react-time-picker": "^5.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
