--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "animate.css": "^4.1.1",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.5",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0",
     "react": "^18.2.0",
