--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.0",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
