--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "formik": "^2.2.9",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.4.2",
     "react-simple-maps": "^3.0.0",
     "react-time-picker": "^5.0.0",
+    "rxjs": "^7.6.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
